# Digital-Heritage

./: app.py  init_db.py  pyproject.toml  run.py
app/: config.py  main.py
app/api/: events.py  health.py
app/models/: models.py
app/services/: gemini_service.py
app/templates/: index.html
elderly_time_manager_frontend/: README.md  pubspec.yaml
elderly_time_manager_frontend/android/app/: build.gradle
elderly_time_manager_frontend/android/app/src/main/: AndroidManifest.xml
elderly_time_manager_frontend/android/app/src/main/kotlin/com/example/elderly_time_manager_frontend/: MainActivity.kt
elderly_time_manager_frontend/ios/Runner/: Info.plist
elderly_time_manager_frontend/ios/Runner.xcodeproj/: project.pbxproj
elderly_time_manager_frontend/lib/: main.dart
elderly_time_manager_frontend/linux/: CMakeLists.txt  my_application.cc
elderly_time_manager_frontend/macos/Runner.xcodeproj/: project.pbxproj
elderly_time_manager_frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
elderly_time_manager_frontend/macos/Runner/Configs/: AppInfo.xcconfig
elderly_time_manager_frontend/test/: widget_test.dart
elderly_time_manager_frontend/web/: index.html  manifest.json
elderly_time_manager_frontend/windows/: CMakeLists.txt
elderly_time_manager_frontend/windows/runner/: Runner.rc  main.cpp
templates/: index.html
